# usb-dac-player

./: .gitignore  LICENSE  NOTICE  README.en.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/salt/usb/dacplayer/: AudioCaptureService.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
usbaudio/: build.gradle  consumer-rules.pro  proguard-rules.pro
usbaudio/src/main/: AndroidManifest.xml
usbaudio/src/main/cpp/: CMakeLists.txt  usb_audio_output.c
usbaudio/src/main/java/com/salt/usb/audio/: DopEncoder.kt  UsbAudioOutput.kt
